--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-This is a sample editing file
-This is updated line.
+
+
+<html>
+  <p>This is a sample editing file</p>
+<p>This is updated line.</p>
+  <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp" width="32" height="32">
+</html>
