--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body style="text-align:center;font-family:Verdana;margin:1%;">
         <h1 style="color:navy">Welcome to Our Website!</h1>
         <hr>
+         <b>This is edited Line</b>
         <p>This is a simple, static website that we deploy by creating a pipeline on AWS CodePipeline.</p>
         <h2>Website Version: 4.0</h2>
     </body>
